tests/src/frontend/typechecking/invalid/pattern_match_readonly_1.sk
mutable class Foo(mutable x: Int) {
  frozen fun cfoo(): void {
    void
  }
}
mutable class Cont<T>(mutable v: T) {
  frozen fun cfoo(): void {
    void
  }
}

fun main(): void {
  rfoo: readonly Foo = mutable Foo(42);
  rcont: readonly Cont<readonly Foo> = mutable Cont(rfoo);
  rcont match {
  | Cont(v) -> v.cfoo()
  };
  print_raw("Fail")
}
